--- a/add.html
+++ b/add.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href=".idea/my.css">
+    <link rel="stylesheet" href="my.css">
     <style>
 
         body {
@@ -40,7 +40,7 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-                <li><a href=".idea/index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="add.html">새로운 영단어 추가</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
