--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href=".idea/my.css">
+    <link rel="stylesheet" href="my.css">
     <style>
         /* Remove the navbar's default margin-bottom and rounded borders */
 
@@ -60,49 +60,13 @@
     <h3>Words</h3><br>
     <div class="row">
         <div class="col-sm-2">
-            <h4><a href=".idea/view.html?word=provide">1</a></h4>
+            <h4><a href="view.html?word=provide">1</a></h4>
         </div>
         <div class="col-sm-2">
-            <h4><a href=".idea/view.html?word=provide">provide</a></h4>
+            <h4><a href="view.html?word=provide">provide</a></h4>
         </div>
         <div class="col-sm-2">
-            <h4><a href=".idea/view.html?word=provide">제공하다, 공급하다</a></h4>
-        </div>
-        <div class="col-sm-2">
-            <h4>레벨 1</h4>
-        </div>
-        <form> <button><a href="edit.html"> edit </a></button> <input type="button" value="Delete" onclick="ok()"> </form>
-    </div>
-</div><br>
-
-<div class="container-fluid bg-3 text-center">
-    <div class="row">
-        <div class="col-sm-2">
-            <h4><a href=".idea/view.html?word=provide">2</a></h4>
-        </div>
-        <div class="col-sm-2">
-            <h4><a href=".idea/view.html?word=provide">develop</a></h4>
-        </div>
-        <div class="col-sm-2">
-            <h4><a href=".idea/view.html?word=provide">개발하다, 발전하다</a></h4>
-        </div>
-        <div class="col-sm-2">
-            <h4>레벨 2</h4>
-        </div>
-        <form> <button><a href="edit.html"> edit </a></button> <input type="button" value="Delete" onclick="ok()"> </form>
-    </div>
-</div><br>
-
-<div class="container-fluid bg-3 text-center">
-    <div class="row">
-        <div class="col-sm-2">
-            <h4><a href=".idea/view.html?word=provide">3</a></h4>
-        </div>
-        <div class="col-sm-2">
-            <h4><a href=".idea/view.html?word=provide">service</a></h4>
-        </div>
-        <div class="col-sm-2">
-            <h4><a href=".idea/view.html?word=provide">서비스, 봉사,공공업무</a></h4>
+            <h4><a href="view.html?word=provide">제공하다, 공급하다</a></h4>
         </div>
         <div class="col-sm-2">
             <h4>레벨 1</h4>
@@ -114,34 +78,16 @@
 <div class="container-fluid bg-3 text-center">
     <div class="row">
         <div class="col-sm-2">
-            <h4><a href=".idea/view.html?word=provide">4</a></h4>
+            <h4><a href="view.html?word=provide">2</a></h4>
         </div>
         <div class="col-sm-2">
-            <h4><a href=".idea/view.html?word=provide">inform</a></h4>
+            <h4><a href="view.html?word=provide">develop</a></h4>
         </div>
         <div class="col-sm-2">
-            <h4><a href=".idea/view.html?word=provide">알리다, 통지하다</a></h4>
+            <h4><a href="view.html?word=provide">개발하다, 발전하다</a></h4>
         </div>
         <div class="col-sm-2">
-            <h4>레벨 3</h4>
-        </div>
-        <form> <button><a href="edit.html"> edit </a></button> <input type="button" value="Delete" onclick="ok()"> </form>
-    </div>
-</div><br>
-
-<div class="container-fluid bg-3 text-center">
-    <div class="row">
-        <div class="col-sm-2">
-            <h4><a href=".idea/view.html?word=provide">5</a></h4>
-        </div>
-        <div class="col-sm-2">
-            <h4><a href=".idea/view.html?word=provide">relationship</a></h4>
-        </div>
-        <div class="col-sm-2">
-            <h4><a href=".idea/view.html?word=provide">관계</a></h4>
-        </div>
-        <div class="col-sm-2">
-            <h4>레벨 3</h4>
+            <h4>레벨 2</h4>
         </div>
         <form> <button><a href="edit.html"> edit </a></button> <input type="button" value="Delete" onclick="ok()"> </form>
     </div>
@@ -150,13 +96,13 @@
 <div class="container-fluid bg-3 text-center">
     <div class="row">
         <div class="col-sm-2">
-            <h4><a href=".idea/view.html?word=provide">6</a></h4>
+            <h4><a href="view.html?word=provide">3</a></h4>
         </div>
         <div class="col-sm-2">
-            <h4><a href=".idea/view.html?word=provide">improve</a></h4>
+            <h4><a href="view.html?word=provide">service</a></h4>
         </div>
         <div class="col-sm-2">
-            <h4><a href=".idea/view.html?word=provide">향상시키다</a></h4>
+            <h4><a href="view.html?word=provide">서비스, 봉사,공공업무</a></h4>
         </div>
         <div class="col-sm-2">
             <h4>레벨 1</h4>
@@ -168,31 +114,13 @@
 <div class="container-fluid bg-3 text-center">
     <div class="row">
         <div class="col-sm-2">
-            <h4><a href=".idea/view.html?word=provide">7</a></h4>
+            <h4><a href="view.html?word=provide">4</a></h4>
         </div>
         <div class="col-sm-2">
-            <h4><a href=".idea/view.html?word=provide">challenge</a></h4>
+            <h4><a href="view.html?word=provide">inform</a></h4>
         </div>
         <div class="col-sm-2">
-            <h4><a href=".idea/view.html?word=provide">도전, 난제</a></h4>
-        </div>
-        <div class="col-sm-2">
-            <h4>레벨 2</h4>
-        </div>
-        <form> <button><a href="edit.html"> edit </a></button> <input type="button" value="Delete" onclick="ok()"> </form>
-    </div>
-</div><br>
-
-<div class="container-fluid bg-3 text-center">
-    <div class="row">
-        <div class="col-sm-2">
-            <h4><a href=".idea/view.html?word=provide">8</a></h4>
-        </div>
-        <div class="col-sm-2">
-            <h4><a href=".idea/view.html?word=provide">influence</a></h4>
-        </div>
-        <div class="col-sm-2">
-            <h4><a href=".idea/view.html?word=provide">영향, 영향을 미치다</a></h4>
+            <h4><a href="view.html?word=provide">알리다, 통지하다</a></h4>
         </div>
         <div class="col-sm-2">
             <h4>레벨 3</h4>
@@ -204,13 +132,49 @@
 <div class="container-fluid bg-3 text-center">
     <div class="row">
         <div class="col-sm-2">
-            <h4><a href=".idea/view.html?word=provide">9</a></h4>
+            <h4><a href="view.html?word=provide">5</a></h4>
         </div>
         <div class="col-sm-2">
-            <h4><a href=".idea/view.html?word=provide">material</a></h4>
+            <h4><a href="view.html?word=provide">relationship</a></h4>
         </div>
         <div class="col-sm-2">
-            <h4><a href=".idea/view.html?word=provide">자료, 재료, 물질</a></h4>
+            <h4><a href="view.html?word=provide">관계</a></h4>
+        </div>
+        <div class="col-sm-2">
+            <h4>레벨 3</h4>
+        </div>
+        <form> <button><a href="edit.html"> edit </a></button> <input type="button" value="Delete" onclick="ok()"> </form>
+    </div>
+</div><br>
+
+<div class="container-fluid bg-3 text-center">
+    <div class="row">
+        <div class="col-sm-2">
+            <h4><a href="view.html?word=provide">6</a></h4>
+        </div>
+        <div class="col-sm-2">
+            <h4><a href="view.html?word=provide">improve</a></h4>
+        </div>
+        <div class="col-sm-2">
+            <h4><a href="view.html?word=provide">향상시키다</a></h4>
+        </div>
+        <div class="col-sm-2">
+            <h4>레벨 1</h4>
+        </div>
+        <form> <button><a href="edit.html"> edit </a></button> <input type="button" value="Delete" onclick="ok()"> </form>
+    </div>
+</div><br>
+
+<div class="container-fluid bg-3 text-center">
+    <div class="row">
+        <div class="col-sm-2">
+            <h4><a href="view.html?word=provide">7</a></h4>
+        </div>
+        <div class="col-sm-2">
+            <h4><a href="view.html?word=provide">challenge</a></h4>
+        </div>
+        <div class="col-sm-2">
+            <h4><a href="view.html?word=provide">도전, 난제</a></h4>
         </div>
         <div class="col-sm-2">
             <h4>레벨 2</h4>
@@ -222,13 +186,49 @@
 <div class="container-fluid bg-3 text-center">
     <div class="row">
         <div class="col-sm-2">
-            <h4><a href=".idea/view.html?word=provide">10</a></h4>
+            <h4><a href="view.html?word=provide">8</a></h4>
         </div>
         <div class="col-sm-2">
-            <h4><a href=".idea/view.html?word=provide">opportunity</a></h4>
+            <h4><a href="view.html?word=provide">influence</a></h4>
         </div>
         <div class="col-sm-2">
-            <h4><a href=".idea/view.html?word=provide">기회</a></h4>
+            <h4><a href="view.html?word=provide">영향, 영향을 미치다</a></h4>
+        </div>
+        <div class="col-sm-2">
+            <h4>레벨 3</h4>
+        </div>
+        <form> <button><a href="edit.html"> edit </a></button> <input type="button" value="Delete" onclick="ok()"> </form>
+    </div>
+</div><br>
+
+<div class="container-fluid bg-3 text-center">
+    <div class="row">
+        <div class="col-sm-2">
+            <h4><a href="view.html?word=provide">9</a></h4>
+        </div>
+        <div class="col-sm-2">
+            <h4><a href="view.html?word=provide">material</a></h4>
+        </div>
+        <div class="col-sm-2">
+            <h4><a href="view.html?word=provide">자료, 재료, 물질</a></h4>
+        </div>
+        <div class="col-sm-2">
+            <h4>레벨 2</h4>
+        </div>
+        <form> <button><a href="edit.html"> edit </a></button> <input type="button" value="Delete" onclick="ok()"> </form>
+    </div>
+</div><br>
+
+<div class="container-fluid bg-3 text-center">
+    <div class="row">
+        <div class="col-sm-2">
+            <h4><a href="view.html?word=provide">10</a></h4>
+        </div>
+        <div class="col-sm-2">
+            <h4><a href="view.html?word=provide">opportunity</a></h4>
+        </div>
+        <div class="col-sm-2">
+            <h4><a href="view.html?word=provide">기회</a></h4>
         </div>
         <div class="col-sm-2">
             <h4>레벨 1</h4>
